overflow issues solved

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ main {
   left: 0;
   width: 100%;
   font-size: 1.5rem;
+  
 
 
 }
@@ -61,6 +62,14 @@ main {
   align-items: center;
   /* opacity: 0.8; */
   border-radius: 10px;
+  height: 90%;
+  overflow: auto;
+  position: relative;
+}
+.alert {
+  position: absolute;
+  z-index: 2;
+  width: 90%;
 }
 
 ul {
@@ -127,3 +136,19 @@ ul li i {
   transform: scale(1.1);
 }
 
+::-webkit-scrollbar {
+  width: 20px;
+  }
+  
+  ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(233, 229, 229); 
+  border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+  background: #f1f1f1;; 
+  border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+  background:rgb(236, 235, 236);}
